# bumpallo

./: README.md  bumpallo.cpp  flake.nix
src/: CMakeLists.txt  bumpallo.cpp
